Added Booking Activity

--- a/NM/app/src/main/res/values/strings.xml
+++ b/NM/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="action1">Action1</string>
     <string name="action2">Action2</string>
     <string name="action3">Action3</string>
+    <string name="title_activity_main2">Book Your Parking Place</string>
 </resources>
