--- a/Servicejson/app/src/main/res/values/strings.xml
+++ b/Servicejson/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Servicejson</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_map">MapActivity</string>
+    <string name="title_activity_testing">Testing</string>
+    <string name="title_activity_zening">Zening</string>
+    <string name="title_activity_final">Final</string>
+    <string name="title_activity_hoja">Hoja</string>
 </resources>
