Checked on college internet

--- a/Servicejson/app/src/main/res/values/strings.xml
+++ b/Servicejson/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_zening">Zening</string>
     <string name="title_activity_final">Final</string>
     <string name="title_activity_hoja">Hoja</string>
+    <string name="title_activity_college">College</string>
 </resources>
